code25_all/scala/11284621.txt
scala> class A { type T = String }
defined class A

scala> val a = new A
a: A = A@591171

scala> a.T   
<console>:13: error: value T is not a member of A
           a.T
             ^

